--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
     "date-fns": "^2.30.0",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
@@ -19,6 +20,7 @@
     "react-native": "0.71.7",
     "react-native-calendars": "^1.1297.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-gesture-handler": "^2.10.1",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-svg": "13.4.0"
   },
