--- a/package.json
+++ b/package.json
@@ -16,14 +16,17 @@
     "@react-navigation/stack": "^6.3.16",
     "date-fns": "^2.30.0",
     "expo": "~48.0.15",
+    "expo-image-picker": "^14.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-calendars": "^1.1297.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.10.1",
+    "react-native-image-picker": "^5.4.0",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
+    "react-native-select-dropdown": "^3.3.3",
     "react-native-svg": "13.4.0"
   },
   "devDependencies": {
