--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~48.0.15",
     "expo-image-picker": "^14.1.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-calendars": "^1.1297.0",
