--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-calendars": "^1.1297.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "^2.10.1",
+    "react-native-google-signin": "^2.1.1",
     "react-native-image-picker": "^5.4.0",
+    "react-native-kakao-login": "^1.0.1",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
     "react-native-select-dropdown": "^3.3.3",
