--- a/app.json
+++ b/app.json
@@ -9,7 +9,8 @@
     "splash": {
       "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#ffffff",
+      "expoClientId": "338399356732-jkutfv9gkjis5736g4erm7f6p0kfq2rj.apps.googleusercontent.com"
     },
     "assetBundlePatterns": [
       "**/*"
