--- a/package.json
+++ b/package.json
@@ -17,21 +17,29 @@
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "expo": "~48.0.15",
-    "expo-image-picker": "^14.1.1",
+    "expo-font": "~11.1.1",
+    "expo-google-sign-in": "^11.0.0",
+    "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
+    "expo-web-browser": "~12.1.1",
     "firebase": "^9.22.1",
     "react": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.3",
     "react-native-calendars": "^1.1297.0",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "^2.10.1",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-image-picker": "^5.4.0",
-    "react-native-kakao-login": "^1.0.1",
-    "react-native-safe-area-context": "^4.5.3",
-    "react-native-screens": "^3.20.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.3",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "react-native-webview": "11.26.0",
+    "expo-auth-session": "~4.0.3",
+    "expo-crypto": "~12.2.1",
+    "expo-application": "~5.1.1",
+    "expo-google-app-auth": "~8.3.0",
+    "expo-random": "~13.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
