--- a/package.json
+++ b/package.json
@@ -17,11 +17,16 @@
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "expo": "~48.0.15",
+    "expo-application": "~5.1.1",
+    "expo-auth-session": "~4.0.3",
+    "expo-crypto": "~12.2.1",
     "expo-font": "~11.1.1",
+    "expo-google-app-auth": "~8.3.0",
     "expo-google-sign-in": "^11.0.0",
     "expo-image-picker": "~14.1.1",
+    "expo-random": "~13.1.1",
     "expo-status-bar": "~1.4.4",
-    "expo-web-browser": "~12.1.1",
+    "expo-web-browser": "^12.1.1",
     "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-native": "0.71.3",
@@ -34,12 +39,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.3",
     "react-native-svg": "13.4.0",
-    "react-native-webview": "11.26.0",
-    "expo-auth-session": "~4.0.3",
-    "expo-crypto": "~12.2.1",
-    "expo-application": "~5.1.1",
-    "expo-google-app-auth": "~8.3.0",
-    "expo-random": "~13.1.1"
+    "react-native-webview": "11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
