--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-image-picker": "^5.4.0",
+    "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.3",
