--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "expo": "~48.0.15",
-    "expo-application": "~5.1.1",
+    "expo-application": "^5.1.1",
     "expo-auth-session": "~4.0.3",
     "expo-crypto": "~12.2.1",
     "expo-font": "~11.1.1",
