--- a/package.json
+++ b/package.json
@@ -19,15 +19,12 @@
     "expo": "~48.0.15",
     "expo-application": "^5.1.1",
     "expo-auth-session": "~4.0.3",
-    "expo-crypto": "~12.2.1",
     "expo-font": "~11.1.1",
-    "expo-google-app-auth": "~8.3.0",
     "expo-google-sign-in": "^11.0.0",
     "expo-image-picker": "~14.1.1",
-    "expo-linking": "~4.0.1",
     "expo-random": "~13.1.1",
     "expo-status-bar": "~1.4.4",
-    "expo-web-browser": "^12.1.1",
+    "expo-web-browser": "~12.1.1",
     "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-native": "0.71.3",
