--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -33,7 +34,7 @@
     "react-native-gesture-handler": "~2.9.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-image-picker": "^5.4.0",
-    "react-native-maps": "1.3.2",
+    "react-native-maps": "^1.7.1",
     "react-native-paper": "^5.8.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
