--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.18.2",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
@@ -29,20 +29,20 @@
     "expo-web-browser": "~12.1.1",
     "firebase": "^9.22.1",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "0.71.8",
     "react-native-calendars": "^1.1297.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-google-signin": "^2.1.1",
     "react-native-image-picker": "^5.4.0",
-    "react-native-maps": "^1.7.1",
+    "react-native-maps": "1.3.2",
     "react-native-paper": "^5.8.0",
-    "react-native-reanimated": "^3.2.0",
+    "react-native-reanimated": "2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.3",
     "react-native-svg": "13.4.0",
-    "react-native-webview": "^11.26.1"
+    "react-native-webview": "11.26.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
