--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-native-screens": "~3.20.0",
     "react-native-select-dropdown": "^3.3.3",
     "react-native-svg": "13.4.0",
+    "react-native-swiper": "^1.6.0",
     "react-native-webview": "11.26.0"
   },
   "devDependencies": {
