--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-font": "~11.1.1",
     "expo-google-sign-in": "^11.0.0",
     "expo-image-picker": "~14.1.1",
+    "expo-modules-core": "^1.2.7",
     "expo-random": "~13.1.1",
     "expo-status-bar": "~1.4.4",
     "expo-web-browser": "~12.1.1",
